--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
   <div class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery, etc.</h1>
     </div>
-    <div class="nav">
+    <div class="nav" role="nav" id="nav" tabindex="0">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0">
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">About</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Shrubs</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Prices</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">News</a></li>
-          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#">Contact</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
       </div>
     </div>
   </div>
 
   <div>
-    <div class="about push" id="about">
+    <div class="about push" role="about" id="about" tabindex="0">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrbs.jpg" alt="">
+        <img class="embed-item" src="images/shrubs.jpg" alt="">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
@@ -47,13 +50,13 @@
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub-1.jpg">
-            <div class="gutter-1-4" id="grassy-shrubs">
+            <div class="gutter-1-4" role="shrubs" id="shrubs" tabindex="0">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub 2.jpg">
-            <div class="gutter-1-4" id="shrubs-with-laurels">
+            <div class= "gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
@@ -69,7 +72,7 @@
       </div>
     </div>
 
-    <div class="prices pad-t pad-b">
+    <div class="prices pad-t pad-b" role="prices" id="prices">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">Prices</h1>
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
@@ -103,7 +106,7 @@
       </div>
     </div>
 
-    <div class="news pad-t pad-b">
+    <div class="news pad-t pad-b" role="news" id="news">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">News</h1>
         <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
@@ -124,7 +127,7 @@
         </ol>
       </div>
 
-    <div class="contact pad-t pad-b">
+    <div class="contact pad-t pad-b" role="contact" id="contact">
       <div class="wrapper">
         <h1 class="push-0 color-brand-dark gutter-1-2">Contact</h1>
         <p class="mega max-length not-centered gutter-1-2">We want… a shrubbery!</p>
