--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jpg">
+            <img class="img-flex push" src="images/shrub-1.jp" alt="image of the shrubbery grass" aria-label="">
             <div class="gutter-1-4" role="shrubs" id="shrubs" tabindex="0">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
