--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </ul>
   <div class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
-      <h1 class="push-0">Shrubbery, etc.</h1>
+      <h1 class="push-0">Shrubbery,etc.</h1>
     </div>
     <div class="nav" role="nav" id="nav" tabindex="0">
       <div class="wrapper gutter-1-2">
@@ -33,7 +33,7 @@
   <div>
     <div class="about push" role="about" id="about" tabindex="0">
       <div class="embed embed-24by10">
-        <img class="embed-item" src="images/shrubs.jpg" alt="">
+        <img aria-details="about" class="embed-item" src="images/shrubs.jpg" alt="image of bunch grass">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
@@ -44,25 +44,25 @@
     </div>
 
     <div>
-      <div class="wrapper gutter-1-2">
+      <div class="wrapper gutter-1-2 pad-t">
         <h1 class="push-0 color-brand-dark">Products</h1>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-1.jp" alt="image of the shrubbery grass" aria-label="">
+            <img aria-details="shrubs" class="img-flex push" src="images/shrub-1.jpg" alt="image of the Grassy shrubs">
             <div class="gutter-1-4" role="shrubs" id="shrubs" tabindex="0">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub 2.jpg">
+            <img aria-detailsl="shrubs-with-laurels" class="img-flex push" src="images/shrub-2.jpg" alt="image of shrubs with laurels">
             <div class= "gutter-1-4" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
-            <img class="img-flex push" src="images/shrub-3.jpg">
+            <img aria-details="two-level-shrub" class="img-flex push" src="images/shrub-3.jpg" alt=" image of two level shrub">
             <div class="gutter-1-4" id="two-level-shrub">
               <h1 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
@@ -78,30 +78,34 @@
         <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
-          <tr>
-            <td>&nbsp;</td>
-            <td>Small</td>
-            <td>Medium</td>
-            <td>Large</td>
-          </tr>
-          <tr>
-            <td>Grassy shrubs</td>
-            <td>$10</td>
-            <td>$20</td>
-            <td>$30</td>
-          </tr>
-          <tr>
-            <td>Shrubs with laurels</td>
-            <td>$40</td>
-            <td>$70</td>
-            <td>$100</td>
-          </tr>
-          <tr>
-            <td>Two-level shrubbery</td>
-            <td>$50</td>
-            <td>$70</td>
-            <td>$90</td>
-          </tr>
+          <thead>
+            <tr>
+              <th >&nbsp;</th>
+              <th scope="col">Small</th>
+              <th scope="col">Medium</th>
+              <th scope="col">Large</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Grassy shrubs</th>
+              <td>$10</td>
+              <td>$20</td>
+              <td>$30</td>
+            </tr>
+            <tr>
+              <th scope="row">Shrubs with laurels</th>
+              <td>$40</td>
+              <td>$70</td>
+              <td>$100</td>
+            </tr>
+            <tr>
+              <th scope="row">Two-level shrubbery</th>
+              <td>$50</td>
+              <td>$70</td>
+              <td>$90</td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </div>
@@ -114,15 +118,15 @@
         <ol class="list-group">
           <li class="push">
             <h3 class="push-0"><a href="#">What makes a good shrubbery?</a></h3>
-            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">A quick checklist for determining if a shrub is worthy of knighthood. <a href="#" aria-label="Read more about of shrub is worthy of knighthood">Read more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Shrubbery recycling</a></h3>
-            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I will come pick up your shrub and recycle it. Though why you’d want to get rid of a shrubbery I do not know. <a href="#" aria-label="Read more about of picking up your shrub and recycle">Read more…</a></p>
           </li>
           <li class="push">
             <h3 class="push-0"><a href="#">Greens of any kind!</a></h3>
-            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#">Read&nbsp;more…</a></p>
+            <p class="push-0">I now sell and plant more than just shrubs! Greens of any kind: lettuce, kale, onions, grasses, trees, etc. <a href="#" aria-label="Read more about of shrubs Greens">Read more…</a></p>
           </li>
         </ol>
       </div>
@@ -134,16 +138,18 @@
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Your name</span>
-            <input>
+            <label class="push-1-8" for="yourname">Your name</label>
+            <input type="yourname" id="yourname" required>
+          </div>
+
+          <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
+            <label class="push-1-8" for="email">E-mail address</label>
+            <input type="email" id="Email" required>
           </div>
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">E-mail address</span>
-            <input>
-          </div>
-          <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <span class="push-1-8">Type of shrubbery</span>
-            <select>
+            <label class="push-1-8" for="shrubbery">Type of shrubbery </label>
+
+            <select id="shrubbery-list">
               <option>Two-level shrubbery</option>
               <option>Small shrubbery</option>
               <option>Shrubbery with laurels</option>
