--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Things and stuff and junk</title>
+  <title>Accessibility fixer upper</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
   <ul class="skip-links">
     <li><a href="#main">Jump to main content</a></li>
-    <li><a href="#nav">Jump to navigation</a></li>
+    <li><a href="#navigation">Jump to navigation</a></li>
   </ul>
   <div class="masthead">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
@@ -20,50 +20,52 @@
     </div>
     <div class="nav" role="nav" id="nav" tabindex="0">
       <div class="wrapper gutter-1-2">
-        <ol class="mega list-group-inline push-0">
+        <ol class="mega list-group-inline push-0 bold">
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#news">News</a></li>
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#contact">Contact</a></li>
+        </ol>
       </div>
     </div>
   </div>
 
   <div>
-    <div class="about push" role="about" id="about" tabindex="0">
+    <div class="about push" role="buy-shrub" id="about" tabindex="0">
       <div class="embed embed-24by10">
         <img aria-details="about" class="embed-item" src="images/shrubs.jpg" alt="image of bunch grass">
       </div>
       <div class="about-content pad-t-2 pad-b-2">
         <div class="wrapper gutter-1-2">
           <h1 class="push-0">About</h1>
-          <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
+          <p class="mega push-0 bold">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length not-centered">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
-
     <div>
-      <div class="wrapper gutter-1-2 pad-t">
-        <h1 class="push-0 color-brand-dark">Products</h1>
+      <div class="wrapper gutter-1-2 pad-t-1-8">
+        <h1 class="push-0 color-brand-dark peta not-italic">Products</h1>
         <p class="mega max-length not-centered">If you do not tell us where we can buy a shrubbery, my friend and I will say… we will say… “nee”.</p>
         <ul class="grid list-group">
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img aria-details="shrubs" class="img-flex push" src="images/shrub-1.jpg" alt="image of the Grassy shrubs">
-            <div class="gutter-1-4" role="shrubs" id="shrubs" tabindex="0">
+            <div class="gutter-1-4 pad-b" role="shrubs" id="shrubs" tabindex="0">
               <h1 class="mega push-0">Grassy shrubs</h1>
-              <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+              <spans>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img aria-detailsl="shrubs-with-laurels" class="img-flex push" src="images/shrub-2.jpg" alt="image of shrubs with laurels">
-            <div class= "gutter-1-4" id="shrubs-with-laurels">
+            <div class= "gutter-1-4 pad-b" id="shrubs-with-laurels">
               <h1 class="mega push-0">Shrubs with laurels</h1>
               <span>Shrubs with laurels have pretty little flowers that bloom sometime during the summer. They’re nice.</span>
             </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img aria-details="two-level-shrub" class="img-flex push" src="images/shrub-3.jpg" alt=" image of two level shrub">
-            <div class="gutter-1-4" id="two-level-shrub">
+            <div class="gutter-1-4 pad-b" id="two-level-shrub">
               <h1 class="mega push-0">Two-level shrubbery</h1>
               <span>Two level shrubbery is where I put two shrubs at different heights, usually with a little path running down the middle.</span>
             </div>
@@ -71,13 +73,14 @@
         </ul>
       </div>
     </div>
-
+  </div>
     <div class="prices pad-t pad-b" role="prices" id="prices">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">Prices</h1>
-        <span class="mega max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
+        <span class="giga max-length not-centered">Even those who arrange and design shrubberies are under considerable economic stress at this period in history.</span>
 
         <table>
+          <caption class="pad-t">Prices for small medium and Large shrubberies</caption>
           <thead>
             <tr>
               <th >&nbsp;</th>
@@ -113,7 +116,7 @@
     <div class="news pad-t pad-b" role="news" id="news">
       <div class="wrapper gutter-1-2">
         <h1 class="push-0 color-brand-dark">News</h1>
-        <p class="mega max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
+        <p class="giga max-length not-centered">Then, when you have found the shrubbery, you must cut down the mightiest tree in the forest… with… a herring!</p>
 
         <ol class="list-group">
           <li class="push">
@@ -130,6 +133,7 @@
           </li>
         </ol>
       </div>
+    </div>
 
     <div class="contact pad-t pad-b" role="contact" id="contact">
       <div class="wrapper">
@@ -138,8 +142,8 @@
 
         <form class="grid" method="post" action="#">
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
-            <label class="push-1-8" for="yourname">Your name</label>
-            <input type="yourname" id="yourname" required>
+            <label class="push-1-8" for="name">Your name</label>
+            <input type="yname" id="yname">
           </div>
 
           <div class="unit [ xs-1 s-1 m-1-2 l-1-3 ] push gutter-1-2">
