Fix more on the index content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
       <h1 class="push-0">Shrubbery,etc.</h1>
     </div>
-    <div class="nav" role="nav" id="nav" tabindex="0">
+    <div class="navigation" role="navigation" id="navigation" tabindex="0">
       <div class="wrapper gutter-1-2">
         <ol class="mega list-group-inline push-0 bold">
           <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
