--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <nav class="nav" role="navigation" id="nav" tabindex="0">
         <div class="wrapper gutter-1-2">
-          <ol class="mega list-group-inline push-0 bold">
+          <ol class="mirc list-group-inline push-0 bold">
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#about">About</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#shrubs">Shrubs</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#prices">Prices</a></li>
